src/test/ui/feature-gates/issue-43106-gating-of-rustc_deprecated.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:16:9
   |
LL |         #![rustc_deprecated()]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:21:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:26:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:32:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:37:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:11:1
   |
LL | #[rustc_deprecated()]
   | ^^^^^^^^^^^^^^^^^^^^^

error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:7:1
   |
LL | #![rustc_deprecated()]
   | ^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:7:1
   |
LL | #![rustc_deprecated()]
   | ^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:11:1
   |
LL | #[rustc_deprecated()]
   | ^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:16:9
   |
LL |         #![rustc_deprecated()]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:21:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:26:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:26:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:32:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/issue-43106-gating-of-rustc_deprecated.rs:37:5
   |
LL |     #[rustc_deprecated()]
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0542, E0734.
For more information about an error, try `rustc --explain E0542`.
